GH-481: Adhere to protoc argument file rules correctly