@@ -30,10 +30,10 @@ import org.junit.jupiter.params.provider.MethodSource;
 @DisplayName("ArgumentFileBuilder tests")
 class ArgumentFileBuilderTest {
 
-  @DisplayName("Arguments are converted to a string argument file in the expected format")
-  @MethodSource("argumentFileCases")
+  @DisplayName("Java arguments are converted to a string argument file in the expected format")
+  @MethodSource("javaArgumentFileCases")
   @ParameterizedTest(name = "for argument list {0}")
-  void argumentsAreConvertedToStringArgumentFileInExpectedFormat(
+  void javaArgumentsAreConvertedToStringArgumentFileInExpectedFormat(
       List<Object> givenArguments,
       String expectedResult
   ) throws IOException  {
@@ -46,13 +46,35 @@ class ArgumentFileBuilderTest {
     }
 
     var actualResult = new StringBuilder();
-    builder.writeTo(actualResult);
+    builder.writeToJavaArgumentFile(actualResult);
 
     // Then
     assertThat(actualResult).asString().isEqualTo(expectedResult);
   }
 
-  static Stream<Arguments> argumentFileCases() {
+  @DisplayName("Protoc arguments are converted to a string argument file in the expected format")
+  @MethodSource("protocArgumentFileCases")
+  @ParameterizedTest(name = "for argument list {0}")
+  void protocArgumentsAreConvertedToStringArgumentFileInExpectedFormat(
+      List<Object> givenArguments,
+      String expectedResult
+  ) throws IOException  {
+    // Given
+    var builder = new ArgumentFileBuilder();
+
+    // When
+    for (var argument : givenArguments) {
+      builder.add(argument);
+    }
+
+    var actualResult = new StringBuilder();
+    builder.writeToProtocArgumentFile(actualResult);
+
+    // Then
+    assertThat(actualResult).asString().isEqualTo(expectedResult);
+  }
+
+  static Stream<Arguments> javaArgumentFileCases() {
     return Stream.of(
         // No arguments
         arguments(
@@ -88,6 +110,41 @@ class ArgumentFileBuilderTest {
         arguments(
             List.of("xxx", "who\"se\"n\"t does this?", "yyy"),
             lines("xxx", "\"who\\\"se\\\"n\\\"t does this?\"", "yyy")
+        ),
+        // Arguments containing non-string characters
+        arguments(
+            List.of(69, 420, "Lol"),
+            lines("69", "420", "Lol")
+        )
+    );
+  }
+
+  static Stream<Arguments> protocArgumentFileCases() {
+    return Stream.of(
+        // No arguments
+        arguments(
+            List.of(),
+            ""
+        ),
+        // Single basic string
+        arguments(
+            List.of("-Xmx300m"),
+            lines("-Xmx300m")
+        ),
+        // Complex basic string
+        arguments(
+            List.of("-Xms100m", "-Xmx1G", "-XX:+UseZGC", "-ea", "org.example.GreetMe", "Bob", "Jo"),
+            lines("-Xms100m", "-Xmx1G", "-XX:+UseZGC", "-ea", "org.example.GreetMe", "Bob", "Jo")
+        ),
+        // Escaping of single quotes
+        arguments(
+            List.of("xxx", "who'se'n't does this?", "yyy"),
+            lines("xxx", "who'se'n't does this?", "yyy")
+        ),
+        // Escaping of double quotes
+        arguments(
+            List.of("xxx", "who\"se\"n\"t does this?", "yyy"),
+            lines("xxx", "who\"se\"n\"t does this?", "yyy")
         ),
         // Arguments containing non-string characters
         arguments(
